--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/laponte16/book-lovers#readme",
   "dependencies": {
     "ejs": "^3.1.8",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-useragent": "^1.0.15"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
