--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/laponte16/book-lovers#readme",
   "dependencies": {
+    "connect-pg-simple": "^7.0.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "express-useragent": "^1.0.15",
     "pg": "^8.8.0"
   },
